--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,6 +4,19 @@
     font-family: Assistant,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     box-sizing: border-box;
 }
+
+/* CSS */
+.nav-links { display: flex; }
+.hamburger { display: none; } /* Hidden on desktop */
+
+@media screen and (max-width: 768px) {
+  .nav-links { display: none; } /* Hide links on mobile */
+  .hamburger { display: block; } /* Show icon on mobile */
+  
+  /* Add styling for dropdown/mobile menu here */
+}
+
+
 header{
     display: flex;
     position: relative;
